# zerokit

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  default.nix  flake.nix  rln.h  rustfmt.toml
.github/: labels.yml  (+1 more)
ark-groth16-partial/: Cargo.toml  README.md
ark-groth16-partial/src/: lib.rs  partial_prover.rs
ark-groth16-partial/tests/: partial.rs
multiplier/: Cargo.toml  Makefile.toml  README.md
multiplier/src/: ffi.rs  lib.rs  main.rs  public.rs
multiplier/tests/: proof.rs  public.rs
poseidon-tornado/: Cargo.toml  README.md
poseidon-tornado/resources/: withdraw.r1cs  withdraw.wasm  witness-example.json
poseidon-tornado/resources/tornado-core/: withdraw.wasm
poseidon-tornado/src/: ffi.rs  main.rs  public.rs
rln/: Cargo.toml  Makefile.toml  README.md  convert_zkey.sh
rln-cli/: .gitignore  Cargo.toml  Makefile.toml  README.md  example.config.json
rln-cli/src/: commands.rs  config.rs  main.rs  state.rs
rln-cli/src/examples/: multi_message_id.rs  partial.rs  relay.rs  stateless.rs
rln-wasm/: .gitignore  Cargo.toml  Makefile.toml  README.md
rln-wasm-utils/: .gitignore  Cargo.toml  Makefile.toml  README.md
rln-wasm-utils/src/: ffi2.rs  lib.rs
rln-wasm-utils/tests/: utils.rs  wasm_utils_test.rs
rln-wasm/benches/: calculated_witness  index.html  proof_with_signal  serialized_message  server.js
rln-wasm/benchs/: index.html  root
rln-wasm/examples/: 0_common.js  1_basic_proof.js  2_serialization.js  3_slashing.js  4_partial_proof.js  5_multi_message_id.js  README.md  basic_proof.js  common.js  index.js  multi_message_id.js  package.json  partial_proof.js  recover_secret.js  type_serialization.js
rln-wasm/resources/: witness_calculator(browser).js  witness_calculator.js  witness_calculator_node.js
rln-wasm/snippets/wasm-bindgen-rayon-e6698bae2cc7187f/src/: workerHelpers.worker.js
rln-wasm/src/: ffi2.rs  lib.rs  utils.js  wasm_rln.rs  wasm_utils.rs
rln-wasm/tests/: basic.rs  browser.rs  multithread.rs  node.rs  rln-wasm.rs  singlethread.rs  utils.rs
rln-wasm/www/: README.md  index.html  index.js  package-lock.json  package.json  rln.wasm  webpack.config.js
rln/benches/: async_proof_benchmark.rs  calc_witness_benchmark.rs  circuit_deser_benchmark.rs  circuit_loading_arkzkey_benchmark.rs  circuit_loading_benchmark.rs  generate_proof.rs  partial_proof.rs  pmtree_benchmark.rs  poseidon_tree_benchmark.rs  proof_benchmark.rs  serialize_benchmark.rs
rln/examples/: Readme.md  multi_message_id.rs  standard.rs
rln/ffi_c_examples/: README.md  Readme.md  basic_proof.c  common.c  main.c  multi_message_id.c  partial_proof.c  recover_secret.c  stateless.c  type_serialization.c
rln/ffi_nim_examples/: README.md  basic_proof.nim  common.nim  main.nim  multi_message_id.nim  partial_proof.nim  recover_secret.nim  rln.nim  rln_example.nim  stateless.nim  type_serialization.nim
rln/resources/: rln.r1cs  rln.wasm  rln_final.zkey  rln_final.zkey_old
rln/resources/tree_depth_10/: circuit.config.toml  config.json  rln.wasm  rln_final.arkzkey  verification_key.json
rln/resources/tree_depth_10/multi_message_id/: rln.wasm  rln_final.arkzkey
rln/resources/tree_depth_10/multi_message_id/max_out_4/: rln.wasm  rln_final.arkzkey
rln/resources/tree_depth_16/: circuit.config.toml  config.json  rln.wasm  rln_final.arkzkey  verification_key.json
rln/resources/tree_depth_20/: circuit.config.toml  config.json  rln_final.arkzkey  verification_key.json
rln/resources/tree_depth_20/multi_message_id/: rln.wasm  rln_final.arkzkey
rln/resources/tree_depth_24/: circuit.config.toml  config.json  rln.wasm  rln_final.arkzkey  verification_key.json
rln/resources/tree_depth_30/: rln.wasm
rln/resources/tree_height_10/: rln_final.arkzkey  rln_final.zkey
rln/resources/tree_height_15/: rln.wasm  rln_final.zkey  verification_key.json
rln/resources/tree_height_16/: rln.r1cs  rln.wasm  rln_final.zkey
rln/resources/tree_height_19/: rln.wasm  rln_final.zkey
rln/resources/tree_height_20/: rln.r1cs  rln.wasm  rln_final.arkzkey  rln_final.zkey  verification_key.arkvkey  verification_key.json
rln/resources/tree_height_32/: rln.wasm  verification_key.json
rln/src/: artifacts.rs  builder.rs  circuit.rs  error.rs  ffi.rs  ffi2.rs  hash.rs  hashers.rs  iden3calc.rs  identity.rs  lib.rs  main.rs  merkle.rs  merkle_tree.rs  partial_proof.rs  partial_prover.rs  pm_tree.rs  pm_tree_adapter.rs  poseidon.rs  poseidon_constants.rs  poseidon_hash.rs  poseidon_tree.rs  prelude.rs  protocol.rs  public.rs  public_api_tests.rs  util.rs  utils.rs  zkey.rs
rln/src/circuit/: error.rs  icicle.rs  iden3calc.rs  mod.rs  qap.rs
rln/src/circuit/icicle/: convert.rs  msm.rs  proof.rs
rln/src/circuit/iden3calc/: graph.rs  proto.rs  storage.rs
rln/src/ffi/: ffi_rln.rs  ffi_rln_v3.rs  ffi_tree.rs  ffi_utils.rs  mod.rs
rln/src/ffi2/: ffi_rln.rs  ffi_tree.rs  ffi_utils.rs  mod.rs
rln/src/iden3calc/: graph.rs  proto.rs  storage.rs
rln/src/protocol/: keygen.rs  mod.rs  mode.rs  proof.rs  serialize.rs  slashing.rs  state.rs  version.rs  witness.rs  zk.rs
rln/tests/: ffi.rs  ffi2.rs  ffi2_stateless.rs  ffi2_utils.rs  ffi_rln.rs  ffi_stateless.rs  ffi_utils.rs  keygen.rs  partial_proof.rs  partial_proofs.rs  pm_tree.rs  poseidon_tree.rs  proof.rs  protocol.rs  public.rs  public_be.rs  serialize.rs  utils.rs  witness.rs
semaphore/: Cargo.toml  README.md  build.rs
semaphore/src/: circuit.rs  lib.rs  protocol.rs
semaphore/tests/: protocol.rs  semaphore.rs
utils/: Cargo.toml  Makefile.toml  README.md
utils/benches/: imt_benchy.rs  merkle_tree_benchmark.rs  poseidon_benchmark.rs
utils/src/: error.rs  lib.rs
utils/src/merkle_tree/: error.rs  full_merkle_tree.rs  merkle_tree.rs  mod.rs  optimal_merkle_tree.rs  override_range_validation.rs
utils/src/pm_tree/: mod.rs  rocksdb_adapter.rs  sled_adapter.rs
utils/src/poseidon/: error.rs  mod.rs  poseidon_constants.rs  poseidon_hash.rs
utils/tests/: merkle_tree.rs  poseidon_constants.rs  poseidon_hash.rs  poseidon_hash_test.rs
(+13 files in other folders)
