[workspace]
members = ["rln", "utils", "ark-groth16-partial"]
exclude = ["rln-cli", "rln-wasm"]
resolver = "2"

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build.
# This improves dev performance while having negligible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
