[package]
name = "multiplier"
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# WASM operations
# wasmer = { version = "2.0" }
# fnv = { version = "1.0.3", default-features = false }
# num = { version = "0.4.0" }
# num-traits = { version = "0.2.0", default-features = false }

# ZKP Generation
# ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.4.0", default-features = false }
# ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "c7e8ade", features = ["parallel"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "8e5c347", default-features = false, features = ["parallel"] }
# ark-poly = { version = "^0.3.0", default-features = false, features = ["parallel"] }
ark-serialize = { version = "0.4.0", default-features = false }
ark-ec ={ version = "0.4.2", default-features = false}

ark-circom = { git = "https://github.com/tyshko-rostyslav/ark-circom.git", features = ["circom-2"], rev = "c367686" }

# error handling
color-eyre = "0.6.1"

# decoding of data
# hex = "0.4.3"
# byteorder = "1.4.3"
