[package]
name = "poseidon-tornado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# WASM operations
# wasmer = { version = "2.0" }
# fnv = { version = "1.0.3", default-features = false }
# num = { version = "0.4.0" }
# num-traits = { version = "0.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

# ZKP Generation
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
# ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
# ark-poly = { version = "^0.3.0", default-features = false, features = ["parallel"] }
#ark-relations = { version = "0.3.0", default-features = false, path = "../../../arkworks-rs/snark/relations", features = [ "std" ] }
ark-relations = { version = "0.3.0", default-features = false, features = [ "std" ] }
ark-serialize = { version = "0.3.0", default-features = false }

ark-circom = { git = "https://github.com/gakonst/ark-circom", features = ["circom-2"] }
#ark-circom = { features = ["circom-2"], path = "../../../gakonst/ark-circom" }

# error handling
# thiserror = "1.0.26"
color-eyre = "0.5"

# decoding of data
# hex = "0.4.3"
# byteorder = "1.4.3"

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"

# json
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.48"
