[package]
name = "rln-cli"
version = "0.5.0"
edition = "2021"

[[example]]
name = "relay"
path = "src/examples/relay.rs"

[[example]]
name = "stateless"
path = "src/examples/stateless.rs"
required-features = ["stateless"]

[dependencies]
rln = { path = "../rln", version = "0.9.0", default-features = false }
zerokit_utils = { path = "../utils", version = "0.7.0", default-features = false }
clap = { version = "4.5.41", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.5"
serde_json = "1.0.141"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["rln/pmtree-ft", "rln/parallel"]
stateless = ["rln/stateless", "rln/parallel"]
