[package]
name = "rln-cli"
version = "0.5.0"
edition = "2021"

[[example]]
name = "relay"
path = "src/examples/relay.rs"

[[example]]
name = "stateless"
path = "src/examples/stateless.rs"
required-features = ["stateless"]

[[example]]
name = "multi_message_id"
path = "src/examples/multi_message_id.rs"
required-features = ["multi-message-id"]

[dependencies]
rln = { path = "../rln", version = "1.0.0", default-features = false }
zerokit_utils = { path = "../utils", version = "1.0.0", default-features = false }
clap = { version = "4.5.53", features = ["cargo", "derive", "env"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = ["rln/pmtree-ft", "rln/parallel"]
stateless = ["rln/stateless", "rln/parallel"]
multi-message-id = ["rln/pmtree-ft", "rln/parallel", "rln/multi-message-id"]

[package.metadata.docs.rs]
all-features = true
