[package]
name = "rln-wasm"
version = "0.3.0"
edition = "2021"
license = "MIT or Apache2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rln = { path = "../rln", version = "0.9.0", default-features = false, features = [
    "stateless",
] }
rln-wasm-utils = { path = "../rln-wasm-utils", version = "0.1.0", default-features = false }
zerokit_utils = { path = "../utils", version = "0.7.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-rayon = { version = "1.3.0", features = [
    "no-bundler",
], optional = true }

# The `console_error_panic_xhook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }

[dev-dependencies]
serde_json = "1.0.141"
wasm-bindgen-test = "0.3.50"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies.web-sys]
version = "0.3.77"
features = ["Window", "Navigator"]

[features]
default = ["console_error_panic_hook"]
parallel = ["rln/parallel", "wasm-bindgen-rayon"]

[package.metadata.docs.rs]
all-features = true
