[package]
name = "rln-wasm"
version = "2.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rln = { path = "../rln", version = "2.0.1", default-features = false }
zerokit_utils = { path = "../utils", version = "1.2.0", default-features = false }
js-sys = "0.3.99"
wasm-bindgen = "0.2.122"
wasm-bindgen-rayon = { version = "1.3.0", features = [
    "no-bundler",
], optional = true }
ark-relations = { version = "0.5.1", features = ["std"] }
ark-groth16 = { version = "0.5.0", default-features = false }
rand = "0.8.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.17", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.72"
wasm-bindgen-futures = "0.4.72"
ark-std = { version = "0.5.0", default-features = false }

[dev-dependencies.web-sys]
version = "0.3.99"
features = ["Window", "Navigator"]

[features]
default = []
utils = []
panic_hook = ["console_error_panic_hook"]
parallel = ["rln/parallel", "wasm-bindgen-rayon", "ark-groth16/parallel"]

[package.metadata.docs.rs]
all-features = true
