[package]
name = "zerokit_utils"
version = "0.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Various utilities for Zerokit"
documentation = "https://github.com/vacp2p/zerokit"
homepage = "https://vac.dev"
repository = "https://github.com/vacp2p/zerokit"

[lib]
bench = false

[dependencies]
ark-ff = { version = "=0.4.2", default-features = false, features = ["asm"] }
num-bigint = { version = "0.4.3", default-features = false, features = [
    "rand",
] }
color-eyre = "0.6.2"
pmtree = { package = "vacp2p_pmtree", version = "=2.0.2", optional = true }
sled = "=0.34.7"
serde = "1.0"
lazy_static = "1.4.0"
hex = "0.4"

[dev-dependencies]
ark-bn254 = "=0.4.0"
num-traits = "0.2.19"
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel"]
pmtree-ft = ["pmtree"]

[[bench]]
name = "merkle_tree_benchmark"
harness = false
