[package]
name = "zerokit_utils"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Various utilities for Zerokit"
documentation = "https://github.com/vacp2p/zerokit"
homepage = "https://vac.dev"
repository = "https://github.com/vacp2p/zerokit"

[lib]
bench = false

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
# pmtree = { package = "vacp2p_pmtree", version = "2.0.2", optional = true }
pmtree = { git = "https://github.com/vacp2p/pmtree", branch = "upgrade-rayon-version", package = "vacp2p_pmtree", optional = true }
sled = "0.34.7"
serde_json = "1.0.141"
lazy_static = "1.5.0"
hex = "0.4.3"
rayon = "1.10.0"
thiserror = "2.0"

[dev-dependencies]
ark-bn254 = { version = "0.5.0", features = ["std"] }
num-traits = "0.2.19"
hex-literal = "0.4.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
criterion = { version = "0.7.0", features = ["html_reports"] }

[features]
default = []
parallel = ["ark-ff/parallel"]
pmtree-ft = ["pmtree"]

[[bench]]
name = "merkle_tree_benchmark"
harness = false

[[bench]]
name = "poseidon_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
