[package]
name = "zerokit_utils"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Various utilities for Zerokit"
documentation = "https://github.com/vacp2p/zerokit"
homepage = "https://vac.dev"
repository = "https://github.com/vacp2p/zerokit"

[lib]
bench = false

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
pmtree = { package = "vacp2p_pmtree", version = "2.0.3", optional = true }
sled = { version = "0.34.7", features = ["compression"] }
serde_json = "1.0.145"
rayon = "1.11.0"
thiserror = "2.0"

[dev-dependencies]
hex = "0.4.3"
hex-literal = "1.1.0"
ark-bn254 = { version = "0.5.0", features = ["std"] }
num-traits = "0.2.19"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
criterion = { version = "0.8.0", features = ["html_reports"] }

[features]
default = []
parallel = ["ark-ff/parallel"]
pmtree-ft = ["pmtree"]

[[bench]]
name = "merkle_tree_benchmark"
harness = false

[[bench]]
name = "poseidon_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
